# django

./: .gitignore  .gitmodules  README.md
Notes/10_Pro_Django/01_Project_Structure, MakeFile, and Seetings Management/: .gitignore  Makefile  Note.txt  pyproject.toml
Notes/10_Pro_Django/01_Project_Structure, MakeFile, and Seetings Management/local/: .gitignore  settings.dev.py
Notes/10_Pro_Django/01_Project_Structure, MakeFile, and Seetings Management/project/: settings.py
Practice/: pyproject.toml
Practice/01/practice_01/: asgi.py
Practice/01/templates/: userData.html
Practice/02/: db.sqlite3
Practice/02/practice_02/: asgi.py  settings.py
Practice/02/shop/: models.py  views.py
Practice/02/shop/migrations/: 0001_initial.py
Practice/03/app/: models.py  urls.py
Practice/03/app/migrations/: 0001_initial.py  0002_alter_user_id.py  0003_alter_user_id.py  0004_alter_user_password.py  0005_delete_user.py  0006_initial.py  0007_delete_user.py  0008_initial.py  0009_delete_user.py  0010_initial.py
Practice/03/app/templates/app/: base.html  (+1 more)
Practice/03/config/: settings.py  urls.py
Practice/03/example/: views.py
Practice/03/models/: user.py
Practice/03/views/: register.py
Practice/practice_01/practice_01/: settings.py  urls.py  views.py  wsgi.py
Practice/practice_01/templates/: index.html
Practice/practice_02/blog/: urls.py
Practice/practice_02/practice_02/: urls.py  wsgi.py
Practice/practice_02/shop/migrations/: 0002_auto_20211213_1516.py
Tutorial/Main_Tutorial/: pyproject.toml
Tutorial/Main_Tutorial/topic_wise/02_Introduction/: note.txt
(+772 files in other folders)
