[tool.poetry]
name = "practice"
version = "0.1.0"
description = "django & DRF practice"
authors = ["Roman-Ojha <razzroman98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
