[tool.poetry]
name = "django-main-tut"
version = "0.1.0"
description = "django tutorial"
authors = ["Roman-Ojha <razzroman98@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
autopep8 = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
